tests/ui/parser/issues/issue-84148-1.rs
fn f(t:for<>t?)
//~^ ERROR: expected one of
//~| ERROR: invalid `?` in type
